--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,11 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
+    // For image processing
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
