--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
 
     // For image processing
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
