--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     // For image processing
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.quickbirdstudios:opencv:4.5.3.0'
 }
